--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-popup-menu": "0.1.0",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-worklets": "^0.6.0"
